# tool-digest

./: .gitignore  LICENSE  README.md  install.sh  instructions.md  instructions_fr.md  main.py  pyproject.toml  requirements.txt
src/: cli.py  core.py
src/digest/: cli.py  core.py  instructions.md
src/digest/prompts/: instructions_en.md  instructions_fr.md
src/tool-digest/: cli.py  core.py
